mgt-namespace/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ing
  namespace: mgt
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # HTTPS로의 강제 리다이렉션 방지
spec:
  rules:
  - host: prometheus.hyuns.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-svc
            port:
              number: 8080
  - host: alertmngr.hyuns.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager-svc
            port:
              number: 9093
  - host: grafana.hyuns.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-svc
            port:
              number: 3000
  - host: argocd.hyuns.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server-svc
            port:
              number: 80
